--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -23,6 +23,6 @@
 }
 
 #title {
-  padding: 10px;
-  font-family: "Lucida Console", "Courier New", monospace;
+  padding: 9px;
+  font-family: Arial, Helvetica, sans-serif;
 }
