--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -12,6 +12,9 @@
   box-shadow: 0 4px 8px 0 #F1F9F6(0,0,0,0.2);
   transition: 0.3s;
   padding: 20px;
+  border-style: outset;
+  font-family: Arial, Helvetica, sans-serif;
+
 }
 
 .card:hover {
