--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -1,7 +1,7 @@
 
 
 #headerlogo {
-  margin-right: 10px;
+  margin-right: 50px;
 }
 
 .card {
@@ -28,5 +28,5 @@
 
 #desc{
     margin-left: 100px;
-    margin-bottom: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
