--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -10,6 +10,7 @@
   padding: 20px;
   border-style: outset;
   font-family: Arial, Helvetica, sans-serif;
+ 
 
 }
 
@@ -24,9 +25,11 @@
 #title {
   padding: 9px;
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  
 }
 
 #desc{
-    margin-left: 100px;
     font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
 }
