--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -5,7 +5,7 @@
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 #F1F9F6(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 #F1F9F6;
   transition: 0.3s;
   padding: 20px;
   border-style: outset;
@@ -15,7 +15,7 @@
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 #255644(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 #255644;
 }
 
 #headercolor {
