--- a/css/sidepanel.css
+++ b/css/sidepanel.css
@@ -24,7 +24,12 @@
   padding: 20px;
   border-style: outset;
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 50vw;
 
+}
+#response{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50vw;
 }
 #headercolor {
   border-radius: 10px;
